# Real-Estate-Finder

./: .env.example  .gitignore  README.md  STREAMLIT_CLOUD.md  app.py  pyproject.toml  requirements.txt  vercel.json
.streamlit/: config.toml  secrets.toml.example
api/: index.py
data/: .gitkeep  bengaluru_listings.csv
docs/: architecture.mmd  business_memo.md  presentation_deck.md
realestate_finder/: __init__.py  graph.py  launch.py  listings.py  models.py  nodes.py  ui_helpers.py
scripts/: demo_sessions.py  draw_graph.py
tests/: test_evaluation_framework.py  test_graph_integration.py  test_preference_learning.py  test_ui_helpers.py
