[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "realestate-finder"
version = "0.1.0"
description = "Real estate recommendation demo with persistent buyer memory"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langsmith>=0.1.0",
    "pydantic>=2.7.0",
    "streamlit>=1.38.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.0.0",
    "psycopg[binary]>=3.1.18",
]

# Named `realestate-streamlit` on purpose: Vercel treats setuptools/script names or files named `app.py`
# as HTTP entrypoints and expects ASGI/WSGI `app`, which Streamlit is not.
[project.scripts]
realestate-streamlit = "realestate_finder.launch:main"

[tool.setuptools.packages.find]
where = ["."]
